--- a/app/src/main/res/layout/pop_up_dialog.xml
+++ b/app/src/main/res/layout/pop_up_dialog.xml
@@ -154,16 +154,17 @@
 
         </LinearLayout>
 
-        <CheckBox
+        <com.yberry.dinehawaii.customview.CustomCheckBox
+            android:id="@+id/cbDefaultAddr"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/_10sdp"
             android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_marginRight="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_9sdp"
             android:buttonTint="@color/colorPrimary"
-            android:textColor="@color/colorPrimary"
-            android:id="@+id/cbDefaultAddr"
             android:text="Set as default address"
-            android:layout_marginTop="@dimen/_9sdp" />
+            android:textColor="@color/colorPrimary"
+            app:edittextfont="Raleway-Regular.ttf" />
 
         <com.yberry.dinehawaii.customview.CustomButton
             android:id="@+id/dsubmit"
